--- a/intricate.ipynb
+++ b/intricate.ipynb
@@ -4,33 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's kick off a GPU-powered training job on FloydHub from this workspace:"
+    "# Creating Intricate Art with Neural Style Transfer\n",
+    "\n",
+    "In order to run the python program, the following arguments are required:\n",
+    "\n",
+    "* content image (found in silhouettes folder)\n",
+    "* style image (found in style folder)\n",
+    "* path to save the output\n",
+    "\n",
+    "Let's try it out!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating project run. Total upload size: 13.8MiB\n",
-      "Syncing code ...\n",
-      "[================================] 14484724/14484724 - 00:00:05\n",
-      "\n",
-      "JOB NAME\n",
-      "--------------------------------------------------\n",
-      "whatrocks/projects/intricate-art-neural-transfer/4\n",
-      "\n",
-      "URL to job: https://www.floydhub.com/whatrocks/projects/intricate-art-neural-transfer/4\n",
-      "\n",
-      "To view logs enter:\n",
-      "   floyd logs whatrocks/projects/intricate-art-neural-transfer/4\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "!python intricate_style.py silhouettes/unicorn.jpg style/color_pattern3.jpg results/unicorn_color_pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GPU-powered mode\n",
+    "\n",
+    "Or, to make things go a little faster, we can run a GPU-powered training job on FloydHub from this workspace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!floyd run --gpu \"python intricate_style.py silhouettes/unicorn.jpg style/color_pattern3.jpg results/unicorn_color_pattern\""
    ]
